@startuml

title __MULTIPLICATION's Class Diagram__\n

  namespace com.example.multiplication {
    class com.example.multiplication.CustomListAdapter {
        - answers : String[]
        - context : Activity
        - correctAnswers : String[]
        - resultArray : String[]
        + CustomListAdapter()
        + getView()
    }
  }
  

  namespace com.example.multiplication {
    class com.example.multiplication.Game {
        {static} - answerList : String[]
        - nbrOfQuestions : int
        - questionNbr : int
        ~ Game()
        ~ getCurrentQuestionPosition()
        ~ getEverythingList()
        ~ getNbrOfQuestions()
        ~ nextQuestion()
        ~ setAnswer()
        - getCorrectAnswerList()
        - getNbrOfCorrectlyAnsweredQuestions()
        - getQuestionStringList()
    }
  }
  

  namespace com.example.multiplication {
    class com.example.multiplication.Game1Activity {
        ~ answerTextEdit : EditText
        ~ questionText : TextView
        # onCreate()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
        - getNextQuestion()
        - openResultActivity()
    }
  }
  

  namespace com.example.multiplication {
    class com.example.multiplication.Game2Activity {
        ~ answerTextEdit : EditText
        ~ chooseTableText : TextView
        ~ questionText : TextView
        # onCreate()
        # onPause()
        # onResume()
        # onStart()
        # onStop()
        - getNextQuestion()
        - openResultActivity()
    }
  }
  

  namespace com.example.multiplication {
    class com.example.multiplication.MainActivity {
        # onCreate()
        - openActivity1()
        - openActivity2()
    }
  }
  

  namespace com.example.multiplication {
    class com.example.multiplication.Question {
        - correctAnswer : int
        - nbr1 : int
        - nbr2 : int
        + Question()
        + equals()
        ~ correctAnswer()
        ~ getCorrectAnswer()
        ~ getQuestion()
        ~ getQuestionsAndAnswer()
    }
  }
  

  namespace com.example.multiplication {
    class com.example.multiplication.QuestionList {
        - list : Question[]
        - nbrOfQuestions : int
        + QuestionList()
        ~ getQuestion()
        - checkListForDuplicateQuestions()
        - generateListWithQuestions()
    }
  }
  

  namespace com.example.multiplication {
    class com.example.multiplication.ResultActivity {
        ~ answers : String[]
        ~ correctAnswers : String[]
        ~ newGame : Button
        ~ resultView : ListView
        ~ results : String[]
        # onCreate()
        - generateLists()
        - openMainActivity()
    }
  }
  

  com.example.multiplication.CustomListAdapter -up-|> android.widget.ArrayAdapter
  com.example.multiplication.Game o-- com.example.multiplication.QuestionList : questionList
  com.example.multiplication.Game1Activity .up.|> java.io.Serializable
  com.example.multiplication.Game1Activity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.multiplication.Game1Activity o-- com.example.multiplication.Game : game
  com.example.multiplication.Game2Activity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.multiplication.Game2Activity o-- com.example.multiplication.Game : game
  com.example.multiplication.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.multiplication.ResultActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
